<resources>
    <string name="app_name">Doctor App</string>
    <string name="title_text">Find your doctor</string>
    <string name="text_input_hint">Search doctor, medicines etc</string>
    <string name="consultation">Consultation</string>
    <string name="dental">Dental</string>
    <string name="heart">Heart</string>
    <string name="hospitals">Hospitals</string>
    <string name="medicines">Medicines</string>
    <string name="physician">Physician</string>
    <string name="skin">Skin</string>
    <string name="surgeon">Surgeon</string>
    <string name="top_doctors">Top Doctors</string>
    <string name="view_all">View all</string>
    <string name="dr_gilang_s">
dr. Gilang Segara Bening
</string>
    <string name="persahabatan_hospital">Persahabatan Hospital</string>
    <string name="rating_counter">(1221)</string>

</resources>