<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_margin" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/navigation_drawer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_sendwich_menu"
            android:onClick="menuSendwichButtonClicked"
            android:src="@drawable/ic_icons_menu_burger"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="@id/user_account_logo" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_account_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/bung_1"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Remove redundant Barrier -->
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/user_logo_section_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="navigation_drawer_button,user_account_logo" />

        <TextView
            android:id="@+id/title"
            style="@style/find_your_d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:text="@string/title_text"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/user_logo_section_barrier" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/text_input_hint"
            app:endIconDrawable="@drawable/ic_search"
            app:endIconMode="custom"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_consultation"
            style="@style/Widget.AppCompat.Button.Borderless.MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:drawableTop="@drawable/ic_consultation_icon"
            android:onClick="buttonClicked"
            android:text="@string/consultation"
            app:layout_constraintEnd_toStartOf="@+id/button_dental"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/text_input_field" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_dental"
            style="@style/Widget.AppCompat.Button.Borderless.MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:drawableTop="@drawable/ic_consultation_icon"
            android:onClick="buttonClicked"
            android:text="@string/dental"
            app:layout_constraintEnd_toStartOf="@+id/button_heart"
            app:layout_constraintStart_toEndOf="@+id/button_consultation"
            app:layout_constraintTop_toBottomOf="@id/text_input_field" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_heart"
            style="@style/Widget.AppCompat.Button.Borderless.MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:drawableTop="@drawable/ic_consultation_icon"
            android:onClick="buttonClicked"
            android:text="@string/heart"
            app:layout_constraintEnd_toStartOf="@+id/button_hospitals"
            app:layout_constraintStart_toEndOf="@+id/button_dental"
            app:layout_constraintTop_toBottomOf="@id/text_input_field" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_hospitals"
            style="@style/Widget.AppCompat.Button.Borderless.MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple"
            android:drawableTop="@drawable/ic_consultation_icon"
            android:onClick="buttonClicked"
            android:text="@string/hospitals"
            app:layout_constraintEnd_toStartOf="@+id/end_guideline"
            app:layout_constraintStart_toEndOf="@+id/button_heart"
            app:layout_constraintTop_toBottomOf="@id/text_input_field" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_medicines"
                    style="@style/Widget.AppCompat.Button.Borderless.MyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple"
                    android:drawableTop="@drawable/ic_consultation_icon"
                    android:onClick="buttonClicked"
                    android:text="@string/medicines"
                    app:layout_constraintStart_toEndOf="@id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@id/button_consultation"
                    />

        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/button_physician"-->
        <!--            style="@style/Widget.AppCompat.Button.Borderless.MyButton"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:background="@drawable/ripple"-->
        <!--            android:drawableTop="@drawable/ic_consultation_icon"-->
        <!--            android:onClick="buttonClicked"-->
        <!--            android:text="@string/physician"-->
        <!--            app:layout_constraintEnd_toStartOf="@id/end_guideline"-->
        <!--            app:layout_constraintHeight_default="wrap"-->
        <!--            app:layout_constraintStart_toEndOf="@id/start_guideline"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/text_input_field"-->
        <!--            app:layout_constraintWidth_default="wrap" />-->

        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/button_skin"-->
        <!--            style="@style/Widget.AppCompat.Button.Borderless.MyButton"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:background="@drawable/ripple"-->
        <!--            android:drawableTop="@drawable/ic_consultation_icon"-->
        <!--            android:onClick="buttonClicked"-->
        <!--            android:text="@string/skin"-->
        <!--            app:layout_constraintEnd_toStartOf="@id/end_guideline"-->
        <!--            app:layout_constraintHeight_default="wrap"-->
        <!--            app:layout_constraintStart_toEndOf="@id/start_guideline"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/text_input_field"-->
        <!--            app:layout_constraintWidth_default="wrap" />-->

        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/button_surgeon"-->
        <!--            style="@style/Widget.AppCompat.Button.Borderless.MyButton"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:background="@drawable/ripple"-->
        <!--            android:drawableTop="@drawable/ic_consultation_icon"-->
        <!--            android:onClick="buttonClicked"-->
        <!--            android:text="@string/surgeon"-->
        <!--            app:layout_constraintEnd_toStartOf="@id/end_guideline"-->
        <!--            app:layout_constraintHeight_default="wrap"-->
        <!--            app:layout_constraintStart_toEndOf="@id/start_guideline"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/text_input_field"-->
        <!--            app:layout_constraintWidth_default="wrap" />-->

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/top_doctors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/top_doctors"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/service_options" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/view_all"
            style="@style/view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/view_all"
            app:layout_constraintBaseline_toBaselineOf="@id/top_doctors"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/top_doctors"
            app:layout_constraintTop_toTopOf="@id/top_doctors" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/list_doctors_first_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:src="@drawable/icon_first_doctor"
            app:layout_constraintStart_toEndOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/top_doctors" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/first_doc_name"
            style="@style/dr_gilang_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dr_gilang_s"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@id/list_doctors_first_icon"
            app:layout_constraintTop_toTopOf="@id/list_doctors_first_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/treatment_category_1_item"
            style="@style/heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/first_doc_name"
            app:layout_constraintTop_toBottomOf="@id/first_doc_name" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/separator"
            android:layout_width="5dp"
            android:layout_height="4dp"
            android:src="@drawable/ic_separator_circle"
            app:layout_constraintBottom_toBottomOf="@id/treatment_category_1_item"
            app:layout_constraintStart_toEndOf="@id/treatment_category_1_item"
            app:layout_constraintTop_toTopOf="@id/treatment_category_1_item" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/hospital_name"
            style="@style/persahabata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/persahabatan_hospital"
            app:layout_constraintBaseline_toBaselineOf="@id/treatment_category_1_item"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/separator" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/rating_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_rating_mark_five"
            app:layout_constraintStart_toStartOf="@id/treatment_category_1_item"
            app:layout_constraintTop_toBottomOf="@id/treatment_category_1_item" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rating_counter_1"
            style="@style/rating_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_counter"
            app:layout_constraintStart_toEndOf="@id/rating_1"
            app:layout_constraintTop_toTopOf="@id/rating_1" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/open_button_1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/ripple_open_button"
            android:onClick="openButtonClicked"
            android:src="@drawable/ic_open_button"
            app:layout_constraintEnd_toStartOf="@id/end_guideline"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/rating_counter_1"
            app:layout_constraintTop_toBottomOf="@id/hospital_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>